src/test/deca/codegen/valid/homemade/test/test_complet_hexa.deca
{
    float x5 = 0x100.0p+0;
    println("x = ", (x5));
}